# mpi_fiddle

./: .gitignore  CMakeLists.txt  MPI.cxx  MPI.hxx  main.cxx
